# CSC4005-2023Fall

./: .gitignore
project1/: Project1-PartA-Results.txt  Project1-PartB-Results.txt  report.md  test.py
project1/report/: partA_plot_data.csv  partA_plot_data.xlsx  partB_plot_data.csv  partB_plot_data.xlsx
project1/src/cpu/: CMakeLists.txt  PartB_Core.hpp  mpi_PartB.cpp  openmp_PartB.cpp  pthread_PartB.cpp  pthread_simd_PartB.cpp  sequential_PartB.cpp  simd_PartB.cpp
project1/src/gpu/: CMakeLists.txt  cuda_PartA.cu  cuda_PartB.cu  openacc_PartB.cpp
project1/src/scripts/: sbatch_PartB.sh  tests.py
project2/: 116020237.md  CMakeLists.txt  screenlog.0
project2/src/: CMakeLists.txt  locality.cpp  matrix.cpp  matrix.hpp  matrix_aligned.cpp  matrix_aligned.hpp  matrix_cuda.cpp  matrix_cuda.hpp  matrix_old.cpp  matrix_old.hpp  mpi.cpp  naive_old.cpp  openmp.cpp  sbach.sh  simd.cpp  simd_aligned.cpp  simd_aligned_tiled.cpp  simd_tiled.cpp  test_and_perf.py  tests.py
project2/src/gpu/: CMakeLists.txt  cuda.cu  openacc.cpp
